# Clicorn

./: .gitignore  Makefile.am  README.md  autogen.sh  config.h  configure.ac  winpack.sh
.github/workflows/: codeql-analysis.yml
include/: app.h  b64.h  bind.h  cJSON.h  err.h  fs.h  miniz.h  net.h  os.h  sha1.h  webview.h  z.h
src/: main.c  winboot.c
src/base64/: buffer.c  decode.c  encode.c
src/binds/: app.c  bind.c  err.c  fs.c  net.c  os.c  sha1.c  z.c
src/cJSON/: cJSON.c
src/miniz/: miniz.c
